--- a/ios/Youngduck/LaunchScreen.storyboard
+++ b/ios/Youngduck/LaunchScreen.storyboard
@@ -1,9 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="22155" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" launchScreen="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="01J-lp-oVM">
-    <device id="retina6_5" orientation="portrait" appearance="light"/>
+    <device id="retina6_7" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="22131"/>
+        <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -13,19 +14,20 @@
             <objects>
                 <viewController id="01J-lp-oVM" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="Ze5-6b-2t3">
-                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <rect key="frame" x="0.0" y="0.0" width="428" height="926"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" image="Image 1" translatesAutoresizingMaskIntoConstraints="NO" id="gWr-vK-BEC">
-                                <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" image="Splash" translatesAutoresizingMaskIntoConstraints="NO" id="e1q-sr-aFa">
+                                <rect key="frame" x="0.0" y="0.0" width="428" height="926"/>
                             </imageView>
                         </subviews>
+                        <viewLayoutGuide key="safeArea" id="cAb-J5-8lX"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
-                            <constraint firstItem="gWr-vK-BEC" firstAttribute="leading" secondItem="Ze5-6b-2t3" secondAttribute="leading" id="Bt6-fg-Bv8"/>
-                            <constraint firstAttribute="trailing" secondItem="gWr-vK-BEC" secondAttribute="trailing" id="IAx-sp-0n0"/>
-                            <constraint firstAttribute="bottom" secondItem="gWr-vK-BEC" secondAttribute="bottom" id="ZOt-Pb-w2a"/>
-                            <constraint firstItem="gWr-vK-BEC" firstAttribute="top" secondItem="Ze5-6b-2t3" secondAttribute="top" id="rRH-O9-y3u"/>
+                            <constraint firstItem="e1q-sr-aFa" firstAttribute="top" secondItem="Ze5-6b-2t3" secondAttribute="top" id="ChG-kH-tAv"/>
+                            <constraint firstItem="e1q-sr-aFa" firstAttribute="leading" secondItem="Ze5-6b-2t3" secondAttribute="leading" id="NwJ-9q-qkS"/>
+                            <constraint firstAttribute="bottom" secondItem="e1q-sr-aFa" secondAttribute="bottom" id="rxF-Jz-juy"/>
+                            <constraint firstAttribute="trailing" secondItem="e1q-sr-aFa" secondAttribute="trailing" id="waV-9B-Zap"/>
                         </constraints>
                     </view>
                 </viewController>
@@ -35,7 +37,7 @@
         </scene>
     </scenes>
     <resources>
-        <image name="Image 1" width="375" height="812"/>
+        <image name="Splash" width="375" height="812"/>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
         </systemColor>
